<resources>
    <string name="app_name">NewsForce</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_technology">Science &amp; Technology</string>
    <string name="menu_worldnews">World News</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_money">Money &amp; Finance</string>
    <string name="menu_business">Business</string>
    <string name="menu_country">National</string>
    <string name="heading_menu_topicwise">Topic-Wise</string>
    <string name="menu_top_news">Top News</string>
    <string name="menu_suggested">Suggested For You</string>
    <string name="todaystop">Today\'s News </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="apikey">5c16d55fbe864cafa673f4937c31bc87</string>
</resources>
